[tool.poetry]
name = "reltools"
version = "0.9.4"
description = "Relation tools for Python."
authors = ["ymoch <ymoch.dev@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/ymoch/reltools"

[tool.poetry.dependencies]
python = "^3.5"
more-itertools = "^7.2"

[tool.poetry.dev-dependencies]
pytest-mypy = "^0.3.3"
pytest-flakes = "^4.0"
pytest-cov = "^2.7"
codecov = "^2.0"
pytest = "^5.0"
pytest-runner = "^5.1"
pytest-codestyle = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
