[tool.poetry]
name = "reltools"
version = "1.0.0"
description = "Relation tools for Python."
authors = ["ymoch <ymoch.dev@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/ymoch/reltools"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-flake8 = "^1.0.7"
pytest-mypy = "^0.8.0"
pytest-cov = "^2.10.1"
codecov = "^2.1.11"

[tool.pytest.ini_options]
testpaths = ['reltools.py', 'README.rst']
addopts = [
  "--doctest-modules",
  "--flake8",
  "--mypy",
  "--mypy-ignore-missing-imports",
  "--cov=reltools",
  "--cov-report=term-missing",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
